fix: fix margin-bottom and z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -276,11 +276,13 @@
   align-items: center;
 }
 
+/* AK - for the section to overlap on other section (according to the design) I made margin-bottom: -50px and z-index: 1 */
 .video__iframes {
   display: grid;
-  margin: 50px auto 0 auto;
+  margin: 50px auto -50px auto;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
+  z-index: 1;
 }
 
 .video__iframe {
@@ -288,7 +290,6 @@
   height: 316px;
   border: 0;
 }
-
 
 /* ----- секция oakley ----- */
 
